--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -25,7 +25,7 @@
 				<a href="#">Bon Plans</a>
 
 				<a href="#">Aide</a>
-				<a href="{% url 'category' enchere %}" class="carte-enchere">
+				<a href="" class="carte-enchere">
 					<img
 						src="http://localhost:8000/static/auctions/media/enchere carte btn.svg"
 						alt=""
